--- a/CSS/styleFormulario.css
+++ b/CSS/styleFormulario.css
@@ -16,9 +16,16 @@ body{
 }
 
 .menu img {
-    margin-left: 6%;
+    margin-left: 35%;
     height: 100%;
-    width: 10%;
+    width: 20%;
+    transition-property: background-color, box-shadow;
+    transition: transform 0.3s ease-in-out,filter 0.3s ease;
+}
+
+.menu img:hover {
+    transform: scale(1.1);
+    filter: brightness(1.2) contrast(1.1);
 }
 
 .botonInicio {
