--- a/CSS/styleSession.css
+++ b/CSS/styleSession.css
@@ -3,10 +3,24 @@ body{
     padding: 0%;
     margin: 0%;
 }
-img {
+.imagen {
     padding: 5vh 45%;
+}
+
+img {
     height: 100%;
-    width: 10%;
+    width: 100%;
+    transition-property: background-color, box-shadow;
+    transition: transform 0.3s ease-in-out,filter 0.3s ease;
+}
+
+img:hover {
+    transform: scale(1.1);
+    filter: brightness(1.2) contrast(1.1);
+}
+
+p{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .Session {
@@ -26,8 +40,14 @@ img {
     padding: 10px;
     width: 30%;
     border-radius: 5px;
-    border-bottom:5px #080808;
-    border-top:4px #080808;
+    border-bottom:2px #080808 solid;
+    border-top:0px;
+    border-left: 0px;
+    border-right: 0px;
+    transition: background-color;
+}
+.Session input:hover {
+    background-color: #eaeaea;
 }
 
 .Session a {
@@ -36,15 +56,21 @@ img {
     color: white;
     text-decoration: none;
     padding: 5px 10px;
-    background-color: #CDA54D;
+    background-color: #cda54d;
     border-radius: 5px;
     margin: 10px;
     font-size: 120%;
     text-align: center;
+    box-shadow: 1px 1px 5px 3px  #d1cec6;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
 }
 .Session a:hover {
     background-color: #080808;
     border: 2px solid #ffffff;
+    box-shadow: 0 4px 8px rgba(209, 159, 52, 0.999);
+
 }
 
 .Session a:active { 
