--- a/CSS/styleFormulario.css
+++ b/CSS/styleFormulario.css
@@ -55,5 +55,92 @@ body{
 
 .botonInicio a:active { 
     background: #faaf4d;
-  }
+}
 
+h1{
+    text-align: center;
+}
+.formulario {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: auto;
+    width: 60%; 
+    background-color: #ffffff;
+    box-shadow: 1px 1px 50px 3px  #d1cec6;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    
+    /* grid-template-areas: "footer footer div"
+    "nav . div"
+    "nav header header"
+    ". header header"; */
+}
+.formulario input {
+    margin: 5px;
+    padding: 10px;
+    width: 30%;
+    border-radius: 5px;
+    border-bottom:2px, 0px, 0px,0px #080808 solid;
+    border-top:0px;
+    border-left: 0px;
+    border-right: 0px;
+    transition: background-color;
+}
+
+.formulario input:hover {
+    background-color: #eaeaea;
+}
+
+.formulario select{
+    margin: 5px;
+    padding: 10px;
+    width: 30%;
+    border-radius: 5px;
+    border-bottom:2px #080808 solid;
+    border-top:0px;
+    border-left: 0px;
+    border-right: 0px;
+    transition: background-color;
+}
+
+.formulario select:hover {
+    background-color: #eaeaea;
+}
+
+.botones{
+    display: flex;
+    padding-top: 2%;
+    /* align-items: center; */
+}
+.botones a {
+    height: 40px;
+    width: 15%;
+    color: white;
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: #cda54d;
+    border-radius: 5px;
+    margin: auto;
+    font-size: 120%;
+    text-align: center;
+    box-shadow: 1px 1px 5px 3px  #d1cec6;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+}
+.botones a:hover {
+    background-color: #080808;
+    border: 2px solid #ffffff;
+    box-shadow: 0 4px 8px rgba(71, 70, 60, 0.999);
+
+}
+
+.botones a:active { 
+    background: #faaf4d;
+  }
