--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -1,6 +1,7 @@
 body{
     padding: 0%;
     Margin: 0%;
+    background-color: #FAF3E0;
 }
 
 .header {
@@ -9,15 +10,22 @@ body{
     height: 15vh;
     display: flex;
     align-items: center;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     position: sticky;
     top: 0.01%;
 }
 
-.header img{
-    margin-left: 6%;
+.header img {
+    margin-left: 35%;
     height: 100%;
-    width: 10%;
+    width: 20%;
+    transition-property: background-color, box-shadow;
+    transition: transform 0.3s ease-in-out,filter 0.3s ease;
+}
+
+.header img:hover {
+    transform: scale(1.1);
+    filter: brightness(1.2) contrast(1.1);
 }
 
 .botonInicio {
