--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -11,7 +11,7 @@ body{
     height: 15vh;
     display: flex;
     align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:'Times New Roman', Times, serif;
     position: sticky;
     top: 0.01%;
 }
