--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -5,7 +5,7 @@ body{
     font-family:'Times New Roman', Times, serif;
 }
 
-.menu {
+.header {
     background: linear-gradient(90deg, #000 40%, #CDA54D 45%);                                         
     width: 100vw;
     height: 15vh;
@@ -56,7 +56,7 @@ body{
 
 .botonInicio a:active { 
     background: #faaf4d;
-  }
+}
 
 .encabezado h1 {
     font-size: 50px;
