--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -62,13 +62,6 @@ body{
     background-color: #f8f1e5;
     color: #4b382a;
 }
-
-.fondo {
-    background: url('cerveza.jpg') no-repeat center center/cover;
-    width: 100%;
-    height: 300px;
-}
-
 .bienvenida {
     text-align: center;
     font-size: 1.8rem;
@@ -90,13 +83,11 @@ body{
     gap: 20px;
 }
 
-.item-nav {
-    display: inline;
-}
+
 
 .enlace-nav {
     text-decoration: none;
-    color: white;
+    color: #ffffff;
     font-weight: bold;
     padding: 10px 15px;
     border-radius: 5px;
@@ -104,7 +95,7 @@ body{
 }
 
 .enlace-nav:hover {
-    background-color: white;
+    background-color: #ffffff;
     color: #8c674a;
 }
 
@@ -118,7 +109,7 @@ body{
 }
 
 .seccion {
-    background-color: white;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -127,22 +118,24 @@ body{
 
 .seccion:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px #00000033;
 }
 
 .contacto {
     text-align: center;
     padding: 50px 0;
+    
 }
 
 .direccion {
     font-weight: bold;
     font-size: 1.2rem;
-    background-color: white;
+    background-color: #ffffff;
     padding: 10px 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #0000001a;
     display: inline-block;
+
 }
 
 
