--- a/CSS/styleFormulario.css
+++ b/CSS/styleFormulario.css
@@ -1,18 +1,20 @@
 body{
-    background-color: #FAF3E0;
+    background-color: #8A817C;
     padding: 0%;
     margin: 0%;
 }
 
 .menu {
-    background: linear-gradient(90deg, #000 40%, #CDA54D 45%);                                         
-    width: 100vw;
+    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+    width: 98.8vw;
     height: 15vh;
     display: flex;
     align-items: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     position: sticky;
     top: 0.01%;
+    border-bottom-right-radius: 300px;
+    border-bottom-left-radius: 300px;
 }
 
 .menu img {
@@ -42,7 +44,7 @@ body{
     color: #ffffff;
     text-decoration: none;
     padding: 5px 10px;
-    background-color: #CDA54D;
+    background-color: rgb(205, 165, 77,0);
     border-radius: 5px;
     margin: 10px;
     font-size: 120%;
@@ -70,7 +72,8 @@ h1{
     margin-left: auto;
     margin-bottom: auto;
     width: 60%; 
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.5);
+    
     box-shadow: 1px 1px 50px 3px  #d1cec6;
 }
 .formulario input {
@@ -119,7 +122,7 @@ h1{
     color: white;
     text-decoration: none;
     padding: 5px 10px;
-    background-color: #cda54d;
+    background-color: #b89445;
     border-radius: 5px;
     margin: auto;
     font-size: 120%;
