--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -6,14 +6,16 @@ body{
 }
 
 .header {
-    background: linear-gradient(90deg, #000 40%, #CDA54D 45%);                                         
-    width: 100vw;
+    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+    width: 98.8vw;
     height: 15vh;
     display: flex;
     align-items: center;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     position: sticky;
     top: 0.01%;
+    border-bottom-right-radius: 300px;
+    border-bottom-left-radius: 300px;
 }
 
 .header img {
@@ -40,10 +42,10 @@ body{
 .botonInicio a {
     height: 40px;
     width: 20%;
-    color: white;
+    color: #ffffff;
     text-decoration: none;
     padding: 5px 10px;
-    background-color: #CDA54D;
+    background-color: rgb(205, 165, 77,0);
     border-radius: 5px;
     margin: 10px;
     font-size: 120%;
@@ -186,7 +188,6 @@ body{
 
 .quadrant1 {
     display: flex;
-    
     justify-content: center;
     font-size: 24px;
     font-weight: bold;
