--- a/CSS/styleProducto3.css
+++ b/CSS/styleProducto3.css
@@ -7,14 +7,16 @@ body{
 }
 
 .menu {
-    background: linear-gradient(90deg, #000 40%, #CDA54D 45%);                                         
-    width: 100vw;
+    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+    width: 98.8vw;
     height: 15vh;
     display: flex;
     align-items: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     position: sticky;
     top: 0.01%;
+    border-bottom-right-radius: 300px;
+    border-bottom-left-radius: 300px;
 }
 
 .menu img {
@@ -41,10 +43,10 @@ body{
 .botonInicio a {
     height: 40px;
     width: 20%;
-    color: white;
+    color: #ffffff;
     text-decoration: none;
     padding: 5px 10px;
-    background-color: #CDA54D;
+    background-color: rgb(205, 165, 77,0);
     border-radius: 5px;
     margin: 10px;
     font-size: 120%;
@@ -86,9 +88,6 @@ body{
     padding: 10px;
     width: 30%;
     border-radius: 5px;
-    border-top:0px;
-    border-left: 0px;
-    border-right: 0px;
     transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
@@ -100,3 +99,27 @@ body{
 .botonCompra:active{
     background-color: #2c602f;
 }
+
+
+footer{
+    background-color: #080808;
+    color: #eaeaea;
+    width: 100vw;
+}
+
+footer img {
+    margin-left: 40vw;
+    margin-right: 40vw;
+    /* margin-left: 35%; */
+    height: 100%;
+    width: 5vw;
+    margin-bottom: 0%;
+    transition-property: background-color, box-shadow;
+    transition: transform 0.3s ease-in-out,filter 0.3s ease;
+}
+
+footer img:hover {
+    transform: scale(1.1);
+    filter: brightness(1.2) contrast(1.1);
+}
+
