--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -205,8 +205,7 @@ body{
 }
 .quadrant2 {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    position: 100%;
     font-size: 24px;
     font-weight: bold;
     border: 2px solid black;
