--- a/CSS/styleFormulario.css
+++ b/CSS/styleFormulario.css
@@ -1,11 +1,11 @@
 body{
-    background-color: #8A817C;
+    background-color: #E9D8B7;
     padding: 0%;
     margin: 0%;
 }
 
 .menu {
-    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);         background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);                                             
     width: 98.8vw;
     height: 15vh;
     display: flex;
