--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -4,13 +4,13 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f1e5;
+    background-color: #E9D8B7;
     color: #4b382a;
 }
 
 .menu {
-    /* background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);                      background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+                                              */
-    background: -webkit-linear-gradient(90deg, #22194d,#2d35a9,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #22194d,#2d35a9,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+
     width: 98.8vw;
     height: 15vh;
     display: flex;
