David: se ajutaron estilos en producto3

--- a/CSS/producto1.css
+++ b/CSS/producto1.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #FAF3E0;
+    background-color: #E9D8B7;
     padding: 0%;
     margin: 0%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
