--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -1,7 +1,7 @@
 body{
     padding: 0%;
     Margin: 0%;
-    background-color:#FAF3E0;;
+    background-color: #E9D8B7;
     font-family:'Times New Roman', Times, serif;
 }
 
