--- a/CSS/styleProducto3.css
+++ b/CSS/styleProducto3.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #FAF3E0;
+    background-color: #E9D8B7;
     padding: 0%;
     margin: 0%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -64,13 +64,23 @@ body{
     display: flex;
     align-items: center;
     flex-direction: row;
-    /* padding: 20px; */
 }
 
 .imagenProducto img {
     width: 50%;
     flex-direction: column;
     margin: 5% 0% 5% 25%;
+    transition: transform 0.3s ease-in-out;
+}
+.imagenProducto img:hover{
+    transform:  scale(1.1);
+}
+.detallesProducto{
+    background-color: rgba(255, 255, 255, 0.6);
+    height: 100%;
+    width: 50%;
+    padding: 50px;
+    margin: 5% 5% 5% 0%;
 }
 .imagenProducto h1 {
     text-align: center;
@@ -104,13 +114,13 @@ body{
 footer{
     background-color: #080808;
     color: #eaeaea;
-    width: 100vw;
+    width: 98.8vw;
+
 }
 
 footer img {
     margin-left: 40vw;
     margin-right: 40vw;
-    /* margin-left: 35%; */
     height: 100%;
     width: 5vw;
     margin-bottom: 0%;
