--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -2,7 +2,7 @@ body{
     padding: 0%;
     Margin: 0%;
     background-color:#FAF3E0;;
-    font-family:'Times New Roman', Times, serif;
+    font-family:Arial, Helvetica, sans-serif;;
 }
 
 .header {
@@ -108,7 +108,7 @@ body{
     border-style:solid;
 }
 .history p{
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -132,7 +132,7 @@ body{
 }
 
 .mission p {
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
     margin: 0;
 }
@@ -172,7 +172,7 @@ body{
 }
 
 .vision p {
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
     margin: 0;               /* Elimina el margen predeterminado del h2 */
 }
@@ -196,12 +196,12 @@ body{
 }
 .quadrant1 p{ 
 
-    font-size: 50px;
+    font-size: 20px;
     margin-top: 0;
 }
-.quadrant2 img {
-    width: 100%;
-    height: auto;
+.quadrant2 p {
+    font-size: 20px;
+    margin-top: 0;
 }
 .quadrant2 {
     display: flex;
