--- a/CSS/styleProducto.css
+++ b/CSS/styleProducto.css
@@ -110,6 +110,26 @@ body{
     background-color: #2c602f;
 }
 
+.opiniones {
+    text-align: center;
+    margin: 20px;
+}
+
+.opinion {
+    background-color: #f9f9f9;
+    padding: 10px;
+    border: 1px solid #ddd;
+    margin: 10px 0;
+}
+
+.galeria h2{
+    text-align: center;
+}
+
+.imagenGaleria img {
+    max-width: 200px;
+    margin: 10px;
+} 
 
 footer{
     background-color: #080808;
