--- a/CSS/styleProducto.css
+++ b/CSS/styleProducto.css
@@ -70,6 +70,7 @@ body{
     width: 50%;
     flex-direction: column;
     margin: 5% 0% 5% 25%;
+    border-radius: 15px;
     transition: transform 0.3s ease-in-out;
 }
 .imagenProducto img:hover{
@@ -81,6 +82,8 @@ body{
     width: 50%;
     padding: 50px;
     margin: 5% 5% 5% 0%;
+    border-radius: 15px;
+
 }
 .imagenProducto h1 {
     text-align: center;
@@ -89,7 +92,19 @@ body{
 .detallesProducto  h2{
     text-align: center;
 }
-
+.sabores{
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+.flecha img{
+    width: 50px;
+    height: 50px;
+    transition: transform 0.3s ease-in-out;
+}
+.flecha img:hover{
+    transform:  scale(1.1);
+}
 .botonCompra {
     background-color: #4CAF50;
     color: #ffffff;
@@ -120,21 +135,31 @@ body{
     padding: 10px;
     border: 1px solid #ddd;
     margin: 10px 0;
+    border-radius: 5px;
 }
 .galeria h2{
     text-align: center;
 }
-
-.imagenGaleria img {
-    max-width: 200px;
-    margin: 10px;
-} 
-
+.imagenes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; 
+}
+.imagenes img {
+    width: 400px;
+    height: 500px;
+    border-radius: 15px;
+    margin: 50px;
+    transition: transform 0.3s ease-in-out;
+}
+.imagenes img:hover{
+    transform:  scale(1.1);
+}
 footer{
     background-color: #080808;
     color: #eaeaea;
     width: 98.8vw;
-
 }
 
 footer img {
