--- a/CSS/Catalogo.css
+++ b/CSS/Catalogo.css
@@ -25,7 +25,6 @@ body{
     margin-left: 35%;
     height: 100%;
     width: 20%;
-    transition-property: background-color, box-shadow;
     transition: transform 0.3s ease-in-out,filter 0.3s ease;
 }
 
@@ -99,7 +98,31 @@ body{
     border-radius: 90%;
     object-fit: cover;
     margin-bottom: 10px;
+    transition: transform 0.3s ease-in-out,filter 0.3s ease;
 }
+
+.boton a {
+    height: 40px;
+    width: 25%;
+    color: white;
+    text-decoration: none;
+    padding: 5px 25px;
+    background-color: #cda54d;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 1px 1px 5px 3px  #d1cec6;
+    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+}
+.boton a:hover {
+    background-color: #e1c17b;
+    border: 2px solid #ffffff;
+}
+
+.boton a:active { 
+    background: #faaf4d;
+}
+
 .cerveza-item img:hover{
     transform: scale(1.1);
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
