--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -6,8 +6,7 @@ body{
     padding: 0;
     background-color: #E9D8B7;
     color: #4b382a;
-  
-}
+ 
 
 .menu {
     background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
@@ -65,6 +64,7 @@ body{
     background: #faaf4d;
 }
 
+
 .bienvenida {
     text-align: center;
     font-size: 1.8rem;
@@ -101,14 +101,7 @@ body{
     background-color: #ffffff;
     color: #8c674a;
 }
-.nav{
-    body {
-        background-image: url("Recursos/fondo.jpg"); /* Ruta de la imagen */
-        background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
-        background-position: center; /* Centra la imagen */
-        background-repeat: no-repeat; /* Evita que la imagen se repita */
-    }
-}
+
 main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -149,7 +142,9 @@ main {
 
 }
 
+
 .contenedor{
+ 
     margin-top: 8%;
     display: flex;
     justify-content: center; 
@@ -196,4 +191,11 @@ img:hover {
     transform: scale(1.1);
     opacity: 0.8; 
 }
-
+.item p {
+    border: 2px solid #D8B982; 
+    padding: 10px; 
+    border-radius: 8px; 
+    background-color: #E3C6A5 rgba(212, 212, 204, 0.8); 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+    text-align: justify;
+}
