--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -7,7 +7,7 @@ body{
     background-color: #E9D8B7;
     color: #4b382a;
  
-
+}
 .menu {
     background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
 
