--- a/CSS/styleFormulario.css
+++ b/CSS/styleFormulario.css
@@ -15,6 +15,7 @@ body{
     top: 0.01%;
     border-bottom-right-radius: 300px;
     border-bottom-left-radius: 300px;
+    animation: animacionSuperior 1s ease-in-out;
 }
 
 .menu img {
@@ -23,6 +24,7 @@ body{
     width: 20%;
     transition-property: background-color, box-shadow;
     transition: transform 0.3s ease-in-out,filter 0.3s ease;
+    animation: animacionSuperior 1.1s ease-in-out;
 }
 
 .menu img:hover {
@@ -36,6 +38,7 @@ body{
     align-items: flex-end;
     width: 100vh;
     margin-right: 7%;
+    animation: animacionSuperior 1.1s ease-in-out;
 }
 
 .botonInicio a {
@@ -73,8 +76,8 @@ h1{
     margin-bottom: auto;
     width: 60%; 
     background-color: rgba(255, 255, 255, 0.5);
-    
     box-shadow: 1px 1px 50px 3px  #d1cec6;
+    animation: animacionInferior 1s ease-in-out;
 }
 .formulario input {
     margin: 5px;
@@ -130,6 +133,8 @@ h1{
     box-shadow: 1px 1px 5px 3px  #d1cec6;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    animation: animacionInferior 1s ease-in-out;
+
 
 }
 .botones a:hover {
@@ -142,3 +147,19 @@ h1{
 .botones a:active { 
     background: #faaf4d;
   }
+
+  @keyframes animacionSuperior {
+    from {
+        transform: translateY(-100%);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
+@keyframes animacionInferior {
+    from {
+        transform: translateY(100%);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
