--- a/CSS/styleSession.css
+++ b/CSS/styleSession.css
@@ -2,7 +2,15 @@ body{
     background-color: #E9D8B7;
     padding: 0%;
     margin: 0%;
+    animation: animacion 1s ease-in-out;
 }
+@keyframes animacion {
+    from {
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
 .imagen {
     padding: 5vh 45%;
 }
@@ -12,6 +20,7 @@ img {
     width: 100%;
     transition-property: background-color, box-shadow;
     transition: transform 0.3s ease-in-out,filter 0.3s ease;
+    animation: animacion 0.9s ease-in-out;
 }
 
 img:hover {
