--- a/CSS/styleProducto.css
+++ b/CSS/styleProducto.css
@@ -2,12 +2,10 @@ body{
     background-color: #E9D8B7;
     padding: 0%;
     margin: 0%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
 }
 
 .menu {
-    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+    background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);         background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);                                             
     width: 98.8vw;
     height: 15vh;
     display: flex;
@@ -17,6 +15,7 @@ body{
     top: 0.01%;
     border-bottom-right-radius: 300px;
     border-bottom-left-radius: 300px;
+    animation: animacionSuperior 1s ease-in-out;
 }
 
 .menu img {
@@ -25,6 +24,7 @@ body{
     width: 20%;
     transition-property: background-color, box-shadow;
     transition: transform 0.3s ease-in-out,filter 0.3s ease;
+    animation: animacionSuperior 1.1s ease-in-out;
 }
 
 .menu img:hover {
@@ -38,6 +38,7 @@ body{
     align-items: flex-end;
     width: 100vh;
     margin-right: 7%;
+    animation: animacionSuperior 1.1s ease-in-out;
 }
 
 .botonInicio a {
@@ -59,6 +60,9 @@ body{
 
 .botonInicio a:active { 
     background: #faaf4d;
+}
+.cuerpo{
+    animation: animacionInferior 1s ease-in-out;
 }
 .producto {
     display: flex;
@@ -156,6 +160,23 @@ body{
 .imagenes img:hover{
     transform:  scale(1.1);
 }
+
+@keyframes animacionSuperior {
+    from {
+        transform: translateY(-100%);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
+@keyframes animacionInferior {
+    from {
+        transform: translateY(100%);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
 footer{
     background-color: #080808;
     color: #eaeaea;
