--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -7,6 +7,7 @@ body{
 
 .header {
     background: -webkit-linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(90deg, #000000,#141007,#a4843d,#a4843d,#cda54d);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+
     width: 98.8vw;
     height: 15vh;
     display: flex;
@@ -16,6 +17,7 @@ body{
     top: 0.01%;
     border-bottom-right-radius: 300px;
     border-bottom-left-radius: 300px;
+    animation: animacionSuperior 1s ease-in-out;
 }
 
 .header img {
@@ -24,6 +26,7 @@ body{
     width: 20%;
     transition-property: background-color, box-shadow;
     transition: transform 0.3s ease-in-out,filter 0.3s ease;
+    animation: animacionSuperior 1.1s ease-in-out;
 }
 
 .header img:hover {
@@ -49,6 +52,7 @@ body{
     border-radius: 5px;
     margin: 10px;
     font-size: 120%;
+    animation: animacionSuperior 1.1s ease-in-out;
 }
 
 .botonInicio a:hover {
@@ -60,12 +64,16 @@ body{
     background: #faaf4d;
 }
 
+.cuerpo{
+    animation: animacionInferior 1s ease-in-out;
+}
 .encabezado h1 {
     font-size: 50px;
     color: #faaf4d;
     background-color: #000;
     display: flex;
     justify-content: center;
+    animation: animacion 1s ease-in-out;
 }
 
 .introduction {
@@ -239,4 +247,26 @@ body{
 .img3 {
     width: 30%;
     height: auto;
+}
+@keyframes animacion {
+    from {
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
+@keyframes animacionSuperior {
+    from {
+        transform: translateY(-100%);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
+@keyframes animacionInferior {
+    from {
+        transform: translateY(100%);
+        filter: blur(20px);
+        opacity: 0;
+    }
 }
