--- a/CSS/styleProducto.css
+++ b/CSS/styleProducto.css
@@ -177,24 +177,23 @@ body{
     }
 }
 
-footer{
+footer {
     background-color: #080808;
     color: #eaeaea;
-    width: 98.8vw;
+    width: 98.8vw; 
+    text-align: center; 
+    padding: 20px 0px; 
 }
 
 footer img {
-    margin-left: 40vw;
-    margin-right: 40vw;
-    height: 100%;
+    display: block;
+    margin: 10px auto; 
+    height: auto;
     width: 5vw;
-    margin-bottom: 0%;
-    transition-property: background-color, box-shadow;
-    transition: transform 0.3s ease-in-out,filter 0.3s ease;
+    transition: transform 0.3s ease-in-out, filter 0.3s ease;
 }
 
 footer img:hover {
     transform: scale(1.1);
     filter: brightness(1.2) contrast(1.1);
 }
-
