--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -3,7 +3,6 @@ body{
     margin: 0%;
     background-color: #E9D8B7;
     font-family:Arial, Helvetica, sans-serif;
-
 }
 
 .header {
@@ -75,8 +74,7 @@ body{
 }
 .encabezado h1 {
     font-size: 50px;
-    color: #faaf4d;
-    background-color: #000;
+    color: #4b382a;
     display: flex;
     justify-content: center;
     animation: animacion 1s ease-in-out;
@@ -113,7 +111,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #4b382a;
+    color: #faaf4d;;
 }
 
 .history img{
@@ -160,6 +158,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #faaf4d;;
 }
 
 .vision {
@@ -187,6 +186,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #faaf4d;;
 }
 
 .vision p {
@@ -204,7 +204,7 @@ body{
     gap: 10px; /* Espacio entre los cuadrantes */
 }
 .quadrants h1{
-    color: #4b382a;
+    color: #faaf4d;;
 }
 .quadrant1 {
     border-radius: 15px;
@@ -259,9 +259,11 @@ body{
 footer {
     background-color: #080808;
     color: #eaeaea;
-    width: 98.8vw; 
+    width: 100%; 
     text-align: center; 
     padding: 20px 0px; 
+    display: flex;
+    justify-content: center;
 }
 
 footer img {
