David: se ajusto el tamaño del footer, se le aplico el nuevo footer a los productos y se ajustaron estilos

--- a/CSS/styleInformation.css
+++ b/CSS/styleInformation.css
@@ -259,7 +259,7 @@ body{
 footer {
     background-color: #080808;
     color: #eaeaea;
-    width: 100%; 
+    width: 98.9vw;
     text-align: center; 
     padding: 20px 0px; 
     display: flex;
@@ -273,7 +273,9 @@ footer img {
     width: 5vw;
     transition: transform 0.3s ease-in-out, filter 0.3s ease;
 }
-
+footer p {
+    text-align: center;
+}
 footer img:hover {
     transform: scale(1.1);
     filter: brightness(1.2) contrast(1.1);
