--- a/CSS/styleProducto.css
+++ b/CSS/styleProducto.css
@@ -2,6 +2,7 @@ body{
     background-color: #E9D8B7;
     padding: 0%;
     margin: 0%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .menu {
@@ -180,7 +181,7 @@ body{
 footer {
     background-color: #080808;
     color: #eaeaea;
-    width: 98.8vw; 
+    width: 98.9vw;
     text-align: center; 
     padding: 20px 0px; 
 }
