--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -229,7 +229,8 @@ footer {
     color: #eaeaea;
     width: 98.9vw;
     text-align: center; 
-    padding: 20px 0px; 
+    padding: 20px 0px;
+    justify-content: center;
 }
 
 footer img {
@@ -243,4 +244,22 @@ footer img {
 footer img:hover {
     transform: scale(1.1);
     filter: brightness(1.2) contrast(1.1);
+}
+
+.redes {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-right: 90%;
+    margin-top: -11%;
+}
+
+.redes a {
+    color: #eaeaea;
+    font-size: 24px;
+    text-decoration: none;
+}
+
+.redes a:hover {
+    color: #ff9800;
 }
