--- a/CSS/styleFormulario.css
+++ b/CSS/styleFormulario.css
@@ -185,20 +185,13 @@ footer img:hover {
     filter: brightness(1.2) contrast(1.1);
 }
 
-.redes {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-right: 90%;
-    margin-top: -11%;
-}
-
-.redes a {
+footer a {
+    margin-top: 11%;
     color: #eaeaea;
     font-size: 24px;
     text-decoration: none;
 }
 
-.redes a:hover {
-    color: #ff9800;
+footer a:hover {
+    color: #7c7c7c;
 }
