--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -229,8 +229,7 @@ footer {
     color: #eaeaea;
     width: 98.9vw;
     text-align: center; 
-    padding: 20px 0px;
-    justify-content: center;
+    padding: 20px 0px; 
 }
 
 footer img {
@@ -246,20 +245,13 @@ footer img:hover {
     filter: brightness(1.2) contrast(1.1);
 }
 
-.redes {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-right: 90%;
-    margin-top: -11%;
-}
-
-.redes a {
+footer a {
+    margin-top: 11%;
     color: #eaeaea;
     font-size: 24px;
     text-decoration: none;
 }
 
-.redes a:hover {
-    color: #ff9800;
+footer a:hover {
+    color: #7c7c7c;
 }
